Agenda del dia acabada, añadida una lista con todas las citas anteriores. Comienzo a programar el formulario de antencion al paciente.

--- a/src/main/webapp/medico/plantillas/menuMedico.xhtml
+++ b/src/main/webapp/medico/plantillas/menuMedico.xhtml
@@ -14,8 +14,8 @@
                             icon="ui-icon-extlink"/>
                 
                 <p:submenu label="Gestión de pacientes">
-                    <p:menuitem value="Ver pacientes en espera" outcome="/medico/privado/listadoCitas.xhtml" />
-                    <p:menuitem value="Ver pacientes despachados" outcome="/administrador/privado/medicos/listadoMedicos.xhtml" />
+                    <p:menuitem value="Ver pacientes para hoy" outcome="/medico/privado/listadoCitas.xhtml" />
+                    <p:menuitem value="Ver pacientes despachados" outcome="/medico/privado/listadoDespachados.xhtml" />
                 </p:submenu>
                 <p:submenu label="Datos del medico">                            
                     <p:menuitem value="Modificar" outcome="/administrador/privado/administradores/listadoAdministradores.xhtml" />                    
